# chatting_with_the_guardian

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: ingestion.yml  named-entity-population.yml  paragraph-embedding-population.yml  python-app.yml
chatting_with_the_guardian/: consts.py  database.py  utils.py
chatting_with_the_guardian/ingestion/: main.py
chatting_with_the_guardian/models/: article.py
chatting_with_the_guardian/named_entity_population/: main.py
chatting_with_the_guardian/paragraph_embedding_population/: main.py
migrations/: env.py
migrations/versions/: 0e0a05f049db_add_models.py  26b0f0976c34_add_silly_model.py  39378ab028d7_reove_article_id.py  5e06a4a5dc23_add_named_entity_table.py  6fa57ba009c7_add_vec_col.py  7a1f41ae3b98_add_blob_uuid.py  824b75e2afda_change_vector_dim.py  862d1aabf9c4_change_uq_constraint_on_articlep.py  8a3c2c69caef_add_summary_table.py  c5d07e279b36_add_named_entity_table_take_2_many_to_.py  e2fe21746179_remove_silly_model.py
tests/: test_article.py  test_utils.py
tests/html/: the_guardian_article.html  the_guardian_frontpage.html
