[tool.poetry]
name = "chatting-with-the-guardian"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshuadouglasgreenhalgh@gmail.com>"]
readme = "README.md"
packages = [{include = "chatting_with_the_guardian"}]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^1"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
pandas = "^1.5.3"
pgvector = "^0.1.6"
spacy = "^3.5.1"
transformers = "^4.27.1"
torch = "^2.0.0"
boto3 = "^1.26.129"


[tool.poetry.group.dev.dependencies]
alembic = "^1.10.2"
pytest = "^7.2.2"
black = "^23.1.0"
pytest-mock = "^3.10.0"
docker = "^6.0.1"
ruff = "^0.0.255"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

ignore = ["E501"]